welcome.lessons.welcome.array.search.Extrema.scala.error
extrema:6: error: '(' expected but identifier found.
    if nums(k)<mi{
       ^extrema:16: error: illegal start of simple expression
  }
  ^